--- a/src/ProgCalc/ProgCalc.csproj
+++ b/src/ProgCalc/ProgCalc.csproj
@@ -70,6 +70,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppRes.cs" />
+    <Compile Include="FormCalcBoard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCalcBoard.Designer.cs">
+      <DependentUpon>FormCalcBoard.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProgCalc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCalcBoard.resx">
+      <DependentUpon>FormCalcBoard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProgCalc.resx">
       <DependentUpon>ProgCalc.cs</DependentUpon>
     </EmbeddedResource>
