--- a/src/ProgCalc/ProgCalc.csproj
+++ b/src/ProgCalc/ProgCalc.csproj
@@ -76,6 +76,7 @@
     <Compile Include="FormCalcBoard.Designer.cs">
       <DependentUpon>FormCalcBoard.cs</DependentUpon>
     </Compile>
+    <Compile Include="HistoryController.cs" />
     <Compile Include="ProgCalc.cs">
       <SubType>Form</SubType>
     </Compile>
