--- a/src/ProgCalc/ProgCalc.csproj
+++ b/src/ProgCalc/ProgCalc.csproj
@@ -59,6 +59,7 @@
     <Reference Include="Microsoft.JScript" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,6 +71,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppRes.cs" />
+    <Compile Include="FormAsciiTable.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAsciiTable.Designer.cs">
+      <DependentUpon>FormAsciiTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormCalcBoard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +106,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting.cs" />
+    <EmbeddedResource Include="FormAsciiTable.resx">
+      <DependentUpon>FormAsciiTable.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormCalcBoard.resx">
       <DependentUpon>FormCalcBoard.cs</DependentUpon>
     </EmbeddedResource>
